# raytracer

./: CMakeLists.txt  CMakePresets.json  README.md
raytracer/: CMakeLists.txt  main.cpp
